<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp" android:layout_height="wrap_content"
        android:background="#ff5492ff"
        android:clickable="false"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:focusable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/myPlan"
            android:id="@+id/dashboardTitle1"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/myPlan_description"
            android:id="@+id/dashboardDescription1"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dashboardButton1"
            android:background="#ff5492ff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp" android:layout_height="wrap_content"
        android:background="#ff19e089"
        android:clickable="false"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/reminders"
                android:id="@+id/dashboardTitle2"
                android:textColor="#ffffffff" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dashboardSwitch1" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/reminders_description"
            android:id="@+id/dashboardDescription2"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure"
                android:id="@+id/dashboardButton2"
                android:background="#ff19e089"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp" android:layout_height="wrap_content"
        android:background="#ffffb028"
        android:clickable="false"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dangerZones"
                android:id="@+id/dashboardTitle3"
                android:textColor="#ffffffff" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dashboardSwitch2" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dangerZones_description"
            android:id="@+id/dashboardDescription3"
            android:textColor="#ffffff"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure"
                android:id="@+id/dashboardButton3"
                android:background="#ffffb028"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />

        </LinearLayout>


    </LinearLayout>





</LinearLayout>
